# 2023_CPT106_Group

./: .gitignore  README.md
clients/: README.md
clients/display_board/: CMakeLists.txt  displayboard.cpp  displayboard.hpp  displayboard.ui  login.ui  login_window.cpp  login_window.hpp  main.cpp
clients/entry_exit_client/: CMakeLists.txt  displayboard.cpp  displayboard.hpp  displayboard.ui  loginwindow.cpp  loginwindow.hpp  loginwindow.ui  loginwindow_jt.ui  main.cpp  operatorwindow.cpp  operatorwindow.hpp  operatorwindow.ui
clients/management_client/: CMakeLists.txt  editspotswindow.cpp  editspotswindow.hpp  editspotswindow.ui  loginwindow.cpp  loginwindow.hpp  loginwindow.ui  main.cpp  managerwindow.cpp  managerwindow.hpp  managerwindow.ui
cpt106report/: document.tex
cpt106report/report/: content.tex  first_page.tex  main_body.tex
doc/: README.md
report/: Project Developing.tex  document.aux  document.tex  document.toc
report/project_developing/: body.md  body.tex
report/user_manul/: content.tex  first_page.tex  main_body.tex
server/: CMakeLists.txt  README.md
server/config/: customer.json  manager.json  model1.json
server/include/: tcp_server.h
server/include/utils/: packing.h  person.h  utility.h
server/script/: test.py
server/src/: main.cpp  tcp_server.cpp
server/src/utils/: packing.cpp  person.cpp  utility.cpp
tests/: README.md
